--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.7.12",
 		"redis": "^2.8.0",
+		"reverse-geocoding-google": "^1.1.0",
 		"websocket": "^1.0.30",
 		"ws": "^7.2.0"
 	}
