--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-	"name": "LionShare",
-	"version": "1.0.0",
-	"description": "a simple game of chance",
-	"main": "index.js",
-	"scripts": {
-		"start": "node index.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon index.js"
-	},
-	"author": "Mushud",
-	"license": "ISC",
-	"dependencies": {
-		"axios": "^0.19.2",
-		"body-parser": "^1.19.0",
-		"cors": "^2.8.5",
-		"crypto": "^1.0.1",
-		"express": "^4.17.1",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.7.12",
-		"redis": "^2.8.0",
-		"reverse-geocoding-google": "^1.1.0",
-		"websocket": "^1.0.30",
-		"ws": "^7.2.0"
-	}
+  "name": "Black Santa",
+  "version": "1.0.0",
+  "description": "a simple game of chance",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
+  },
+  "author": "Mushud",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.12",
+    "redis": "^2.8.0",
+    "reverse-geocoding-google": "^1.1.0",
+    "websocket": "^1.0.30",
+    "ws": "^7.2.0"
+  }
 }
