--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
+    "morgan": "^1.10.0",
     "redis": "^2.8.0",
     "reverse-geocoding-google": "^1.1.0",
     "websocket": "^1.0.30",
